Fixed scrollbar issue

--- a/css/augmentedreality.css
+++ b/css/augmentedreality.css
@@ -1,7 +1,7 @@
 /* Specific to this page; do not copy to other pages */
 
 #hololens-container, #pokemongo-container, #googleglass-container {
-	width: 100vw;
+	width: 100%;
 	height: 125vh;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
