--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,13 @@
 body {
 	font-family: Roboto, Arial;
 	margin: 0px !important;
-	height: initial;
 	display: none;
-	position: absolute;
-	top: 0px;
-	bottom: 0px;
-	left: 0px;
-	right: -15px;
-	overflow-y: auto;
 	overflow-x: hidden;
 }
 
 html {
-	overflow: hidden;
+	width: initial;
+	height: initial;
 }
 
 #landing {
@@ -53,11 +47,8 @@ html {
 }
 
 #landing-container {
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
-	margin-left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
 	position: fixed;
 	top: 90px;
 	background-color: #66baff;
@@ -72,7 +63,7 @@ html {
 }
 
 #main-content {
-	width: 100vw;
+	width: 100%;
 	margin: 100vh auto 0px auto;
 	padding: 15px;
 	position: relative;
