--- a/css/nav.css
+++ b/css/nav.css
@@ -5,7 +5,7 @@
 	padding: 10px;
 	position: fixed;
 	top: 0;
-	width: 100vw;
+	width: 100%;
 	z-index: 20;
 	height: 90px;
 }
@@ -69,7 +69,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	z-index: 100 !important;
 }
