--- a/css/video-container.css
+++ b/css/video-container.css
@@ -1,5 +1,5 @@
-#video-container {
-	width: 100vw;
+#video {
+	width: 100%;
 	margin-left: 50%;
 	-webkit-transform: translateY(-50%);
 	transform: translateX(-50%);
@@ -8,17 +8,10 @@
 	z-index: -5;
 }
 
-#video {
-	width: 100vw;
-}
-
 @media screen and (orientation: portrait), screen and (max-width: 1150px) {
-	#video-container {
-		top: 90px;
-	}
 	#video {
 		width: initial;
-		min-width: 100vw;
+		min-width: 100%;
 		min-height: 100vh;
 	}
 }
